<resources>
    <string name="app_name">OpenEET</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Registrovat</string>
    <string name="title_activity_main">OpenEET</string>
    <string name="title_register_sale">Údaje tržby</string>
    <string name="action_retry_register">Opakovat registraci</string>


    <string name="dic_popl">DIČ poplatníka</string>
    <string name="dic_poverujiciho">DIČ pověřujícího</string>
    <string name="id_provoz">ID provozovny</string>
    <string name="id_pokl">ID pokladny</string>
    <string name="porad_cis">Pořadové číslo</string>
    <string name="dat_trzby">Datum tržby</string>
    <string name="celk_trzba">Celková tržba</string>
    <string name="zakl_nepodl_dph">Základe nepodléhající DPH</string>
    <string name="zakl_dan1">Základ 1</string>
    <string name="dan1">Daň 1</string>
    <string name="zakl_dan2">Základ 2</string>
    <string name="dan2">Daň 2</string>
    <string name="zakl_dan3">Základ 3</string>
    <string name="dan3">Daň 3</string>
    <string name="cest_sluz">Služební cesta</string>
    <string name="pouzit_zboz1">Použít zboží 1</string>
    <string name="pouzit_zboz2">Použít zboží 2</string>
    <string name="pouzit_zboz3">Použít zboží 3</string>
    <string name="urceno_cerp_zuct">Určeno čerpání zůstatku</string>
    <string name="cerp_zuct">Čerpání zůstatku</string>
    <string name="rezim">Režim</string>

    <!-- hints -->
    <string name="dic_popl_hint"></string>
    <string name="dic_poverujiciho_hint"></string>
    <string name="id_provoz_hint"></string>
    <string name="id_pokl_hint"></string>
    <string name="porad_cis_hint"></string>
    <string name="dat_trzby_hint"></string>
    <string name="celk_trzba_hint"></string>
    <string name="zakl_nepodl_dph_hint"></string>
    <string name="zakl_dan1_hint"></string>
    <string name="dan1_hint"></string>
    <string name="zakl_dan2_hint"></string>
    <string name="dan2_hint"></string>
    <string name="zakl_dan3_hint"></string>
    <string name="dan3_hint"></string>
    <string name="cest_sluz_hint"></string>
    <string name="pouzit_zboz1_hint"></string>
    <string name="pouzit_zboz2_hint"></string>
    <string name="pouzit_zboz3_hint"></string>
    <string name="urceno_cerp_zuct_hint"></string>
    <string name="cerp_zuct_hint"></string>
    <string name="rezim_hint"></string>


    <!--    dic_popl
    dic_poverujiciho
    id_provoz
    id_pokl
    porad_cis
    dat_trzby
    celk_trzba
    zakl_nepodl_dph
    zakl_dan1
    dan1
    zakl_dan2
    dan2
    zakl_dan3
    dan3
    cest_sluz
    pouzit_zboz1
    pouzit_zboz2
    pouzit_zboz3
    urceno_cerp_zuct
    cerp_zuct
    rezim


    dic_popl;
    dic_poverujiciho;
    id_provoz;
    id_pokl;
    porad_cis;
    dat_trzby;
    celk_trzba;
    zakl_nepodl_dph;
    zakl_dan1;
    dan1;
    zakl_dan2;
    dan2;
    zakl_dan3;
    dan3;
    cest_sluz;
    pouzit_zboz1;
    pouzit_zboz2;
    pouzit_zboz3;
    urceno_cerp_zuct;
    cerp_zuct;
    rezim;

    dat_odesl;
	prvni_zaslani;
	uuid_zpravy;
	overeni;


-->


    <string name="icon_exchange">&#xf0ec;</string>
    <string name="icon_done_online">&#xf14a;</string>
    <string name="icon_done_offline">&#xf046;</string>
    <string name="icon_error">&#xf071;</string>
    <string name="icon_gears">&#xf085;</string>
    <string name="title_activity_main_activity_new">MainActivityNew</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_about">O aplikaci</string>
    <string name="about_text_intro">Aplikace poskytující základní funkcionalitu registrace účtenek v systému EET.</string>
    <string name="about_text_github_link">https://github.com/l-ra/openeet/</string>
    <string name="about_text_copyrigth">Copyright © 2016 Luděk Rašek</string>
    <string name="about_text_detail">Aplikace je poskytována zdarma a bez jakékoli záruky a to včetně zdrojového kódu pod Apache licencí. Pokud vám v aplikaci něco chybí nebo něco nefunguje, napište podnět do hodnocení na Play Store, nebo zadejte issue na github.</string>
    <string name="about_text_title">OpenEET Aplikace</string>
    <string name="about_text_version">Verze:</string>
    <string name="title_activity_sale_detail">Detail účtenky</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
